# protobuf-edition-lsp

./: CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/actions/test/: action.yml
.github/workflows/: automerge.yml
src/: lib.rs  main.rs
src/lsp_server/: document_store.rs  handlers.rs  mod.rs
src/parser/: lexer.rs  mod.rs  parser_impl.rs  validator.rs
tests/: lsp_server_test.rs  parser_test.rs
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json  pnpm-lock.yaml  protobuf-edition-lsp-0.1.0.vsix
vscode-extension/src/: extension.ts
